--- a/css/sass/_base-atoms.scss
+++ b/css/sass/_base-atoms.scss
@@ -186,23 +186,26 @@ h2 {
 	padding: 22px 0;
 	font-weight: bold;
 	
-	&.small {
-		font-size: 18px;
-		line-height: 22px;
-		
-		.widget & {
-			padding-bottom: 11px;
-		}
-		
-		.sidebar-inline & {
-			padding-top: 0;
-			
-		}
-		
-		.search-sidebar & {
-			padding-top: 8px;
-		}
+	
+	.sidebar-outline &, 
+	.widget & {
+	    padding-bottom: 11px;
 	}
+	.sidebar-inline & {
+	    padding-top: 0;			
+	}	
+	.search-sidebar & {
+	    padding-top: 8px;
+	}
+	&.small,
+	.sidebar-inline &,
+	.search-sidebar &,
+	.sidebar-outline &, 
+	.widget & {
+	    font-size: 18px;	
+	    line-height: 22px;
+	}
+	 
 	&.subtitle {
 		font-size: 18px;
 		line-height: 22px;
@@ -237,7 +240,13 @@ h3 {
 		font-size: 16px;
 		font-weight: normal;
 	}
-
+	.sidebar-inline &,
+	.search-sidebar &,
+	.sidebar-outline &, 
+	.widget & {
+	    font-size: 16px;	
+	    line-height: 20px;
+	}
 	
 }
 
