--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -556,8 +556,8 @@ ul.person-info {
 		background-image: none;
 		padding-left: 0px;
 		min-height: 20px;
-		font-size: 13px;
-		line-height: 20px;
+		// font-size: 13px;
+		// line-height: 20px;
 		background-repeat: no-repeat;
 		background-position: left center;
 		
