--- a/css/sass/_plugin-misc.scss
+++ b/css/sass/_plugin-misc.scss
@@ -10,3 +10,10 @@ Anpassungen der gestaltung an verschiedene Plugins
 	}
 }
 
+
+/* Social Media Buttons */
+.likebutton-dynamic, .tweetbutton-dynamic {
+	float: left;
+	margin-right: 20px;
+	margin-top: 10px;
+}
