Just Vector entfernt #59

--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -970,12 +970,12 @@
 	.current_page_ancestor {
 		a {
 			color: $colorSubNavCurrent;
-			background-color: $colorSubNavCurrentBackground; // #d0d8e6;
+			background-color: $colorSubNavCurrentBackground; 
 			border: none;
 			
 			&:hover, &:focus {        
-				background-color: $colorSubNavCurrentHoverBackground; // #b9c4d6;
-				color: $colorSubNavCurrentHover; // #003366;
+				background-color: $colorSubNavCurrentHoverBackground; 
+				color: $colorSubNavCurrentHover; 
 			}
 		}
 		
@@ -1001,36 +1001,36 @@
 		padding-left: 45px;
 		
 		&:hover, &:focus {
-			background: $colorSubNavBackgroundHover; // #7a8ba7 !important;
-			color: $colorSubNav; // #fff !important;
+			background: $colorSubNavBackgroundHover; 
+			color: $colorSubNav; 
 		}
 	}
 	
 	li .current_page_item,
 	li .current_page_ancestor {
 		a {
-			background: $colorSubNavCurrentBackground; // #b9c4d6;
+			background: $colorSubNavCurrentBackground; 
 		}
 		
 		li {
 			a:hover, a:focus {
-				background: $colorSubNavCurrentHoverBackground; // #98a5bc;
+				background: $colorSubNavCurrentHoverBackground; 
 			}
 		}
 	}
 	
 	li .current_page_ancestor .current_page_item a {
-		background: $colorSubNavCurrentHoverBackground; // #98a5bc;
+		background: $colorSubNavCurrentHoverBackground;
 	}
 	
 	li li .current_page_ancestor a {
-		background: $colorSubNavCurrentHoverBackground; // #98a5bc;
+		background: $colorSubNavCurrentHoverBackground;
 	}
 	
 	li li li li a,
 	li li li li.current_page_item a {
-		background: $colorSubNavBackgroundHover; // #7a8ba7 !important;
-		color: $colorSubNavCurrent; // #fff !important;
+		background: $colorSubNavBackgroundHover; 
+		color: $colorSubNavCurrent;
 	}
 	
 	li.protected-page a {
@@ -1098,7 +1098,7 @@
 				color: $colorSocialBackground;
 				height: 21px;
 				width: 24px;
-				padding-top: 3px;
+				padding-top: 5px;
 				line-height: 24px;
 				text-align: center;
 				@include border-radius(12px);
@@ -1107,40 +1107,27 @@
 			}
 		}
 		
-		/*
-		li.social-facebook a:before { @extend .fa-facebook-square; }
-		li.social-twitter a:before { @extend .fa-twitter-square; }
-		li.social-gplus a:before { @extend .fa-google-plus-square; }
-		li.social-youtube a:before { @extend .fa-youtube-square; }
-		li.social-vimeo a:before { @extend .fa-vimeo-square; }
-		li.social-flickr a:before { @extend .fa-flickr; }
-		li.social-xing a:before { @extend .fa-xing-square; }
-		li.social-pinterest a:before { @extend .fa-pinterest-square; }
-		li.social-feed a:before { @extend .fa-rss-square; }
-		li.social-delicious a:before { @extend .fa-delicious; }
-		li.social-skype a:before { @extend .fa-skype; }
-		li.social-tumblr a:before { @extend .fa-tumblr-square; }
-		li.social-github a:before { @extend .fa-github-square; }
-		*/
-		li.social-facebook a:before { @extend .jv-facebook; }
-	 	li.social-diaspora a:before { @extend .fa; @extend .fa-3x; content: '*'; vertical-align: -5px; line-height: 37px; }
-		li.social-identica a:before { @extend .jv-identi-ca; }
-		li.social-skype a:before { @extend .jv-skype; }
-		li.social-itunes a:before { @extend .jv-itunes; }
-		li.social-twitter a:before { @extend .jv-twitter; }
-		li.social-gplus a:before {  @extend .fa;  @extend .fa-fw; line-height: 1.0em; @extend .fa-google;}
-		li.social-youtube a:before { @extend .jv-youtube; }
-		li.social-vimeo a:before { @extend .jv-vimeo; }
-		li.social-flickr a:before { @extend .jv-flickr; }
-		li.social-xing a:before { @extend .jv-xing; }
-		li.social-pinterest a:before { @extend .fa-pinterest-p; @extend .fa; @extend .fa-lg; line-height: 1.0em;}
+	
+		
+		li.social-gplus a:before {  @extend .fa;  @extend .fa-google-plus;}
+		li.social-diaspora a:before { @extend .fa; content: '*'; font-size: 20px; font-weight: bold;}
+		li.social-pinterest a:before { @extend .fa; @extend .fa-pinterest-p; @extend .fa-lg; line-height: 1.0em;}
 		li.social-instagram a:before { @extend .fa; @extend .fa-instagram; line-height: 1.0em;}
-
-		li.social-feed a:before { @extend .jv-rss; }
-		li.social-delicious a:before { @extend .jv-delicious; }
-		li.social-skype a:before { @extend .jv-skype; }
-		li.social-tumblr a:before { @extend .jv-tumblr; }
-		li.social-github a:before { @extend .jv-github; }
+		li.social-facebook a:before {  @extend .fa; @extend .fa-facebook; }
+		li.social-twitter a:before {  @extend .fa; @extend .fa-twitter; }
+		li.social-xing a:before {  @extend .fa; @extend .fa-xing; }
+		li.social-github a:before {  @extend .fa; @extend .fa-github; }	
+		li.social-skype a:before {  @extend .fa; @extend .fa-skype; }
+		li.social-tumblr a:before {  @extend .fa; @extend .fa-tumblr; }
+		li.social-delicious a:before {  @extend .fa; @extend .fa-delicious; }
+		li.social-flickr a:before {  @extend .fa; @extend .fa-flickr; }
+		li.social-feed a:before { @extend .fa;  @extend .fa-rss-square; }
+		li.social-vimeo a:before { @extend .fa; @extend .fa-vimeo-square; }
+		li.social-youtube a:before { @extend .fa; @extend .fa-youtube-square; }
+		li.social-itunes a:before { @extend .fa; @extend .fa-apple; }
+		li.social-wikipedia a:before { @extend .fa; @extend .fa-wikipedia-w; }
+		
+		
 	}
 	
 	iframe {
