hr verkleinert im Default. Neue Klasse big eingefügt.

--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -13,7 +13,7 @@ Main CSS File for Wordpress Theme FAU
 @import "includes/mixins";
 @import "includes/fonts";
 @import "includes/font-awesome";
-@import "includes/font-justvector";
+// @import "includes/font-justvector";
 @import "includes/helpers";
 
 // Import Main Stylings
