Social Media Footer: icons brechen um, wenn sie gesetzt sind, aber das Widget leer ist

--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -1069,6 +1069,10 @@
 		
 		li {
 			@include no-list;
+			@include inline-block;
+			max-width: 220px;
+			width: 100%;
+			
 			background: none;
 			
 			a {
