--- a/css/sass/_plugin-misc.scss
+++ b/css/sass/_plugin-misc.scss
@@ -3,6 +3,7 @@ Anpassungen der gestaltung an verschiedene Plugins
 */
 
 
+/* Anpassungen für Sharif-Plugin */
 .shariff {	
 	li {
 		@include no-list;
@@ -16,4 +17,49 @@ Anpassungen der gestaltung an verschiedene Plugins
 	float: left;
 	margin-right: 20px;
 	margin-top: 10px;
+}
+
+
+
+
+/* Studienangebot Database */
+#studienangebot {
+	border: none;
+	margin: 0;
+	padding: 0;
+	
+	select {
+		max-width: 220px;
+	}
+	
+	input[type="checkbox"] {
+		margin-top: -4px;
+	}
+	
+	label {
+		font-size: 12px;
+		line-height: 15px;
+		padding-left: 3px;
+	}
+	
+	p {
+		line-height: 15px;
+		margin-bottom: 0;
+		padding-bottom: 5px;
+		@include hyphens(none);
+	}
+	
+	h4 {
+		padding: 6px 0;
+	}
+	
+	.submit-button {
+		margin-top: 20px;
+	}
+	
+	th {
+	    width: 200px;
+	    vertical-align: top;
+	}
+	
 }
