--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -834,7 +834,7 @@
 	
 	img.error-404-persons {
 		@include box-shadow(none);
-		margin: 0 auto -22px auto;
+		margin: 0 auto;
 		display: block;
 	}
 	
