- fau-studiengangsplugin css raus - neue klasse für fau person plugin zur darstellung von personendaten -mobile

--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -593,6 +593,11 @@ ul.person-info {
 	    width: 20px; 
 	    @extend .fa-phone; 
 	}
+	li.person-info-mobile:before { 
+	    @extend .fa;
+	    width: 20px; 
+	    @extend .fa-mobile; 
+	}	
 	li.person-info-fax:before {
 	    @extend .fa;
 	    width: 20px; 
