Vereinheitlichung Listenelemente in Sidebar und Widgets

--- a/css/sass/_base-atoms.scss
+++ b/css/sass/_base-atoms.scss
@@ -390,7 +390,8 @@ li {
 }
 
 .sidebar-inline li {
-    	background: url('../img/list-arrow.png') no-repeat left 4px;
+   	background: url('../img/list-arrow.png') no-repeat left 4px;
+    //    background: url('../img/list-arrow-blue.png') no-repeat left 4px;
 	padding: 3px 0 4px 20px;
 }
 
