--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -302,7 +302,7 @@
 	//	padding-left: 20px;
 		padding-bottom: 3px;
 	//	background: url('../img/list-arrow-blue.png') no-repeat left 4px;
-		
+		display: table-row;
 		
 		a {
 			text-decoration: none;
@@ -318,6 +318,7 @@
 	    font-weight: bold;
 	    color: $colorDefault; 
 	    width: 15px;
+	    display: table-cell;
 	}
 	
 }
@@ -944,14 +945,15 @@ span[itemprop="honorificSuffix"] {
 .read-more-arrow {
 	text-decoration: none;
 	padding-right: 3px;
-	padding-left: 2px;
-	font-size: 22px;
-	line-height: 16px;
+	padding-left: 5px;
 	
+	@extend .fa;
+	@extend .fa-angle-right;
+		
 	&:hover, &:focus {
 		text-decoration: none;
-		padding-left: 5px;
-		padding-right: 0;
+		
+		@extend .fa-angle-double-right;
 	}
 }
 
